# HDSM

./: CMakeLists.txt  LICENSE  README
defs/: hdsm.h  hdsmimpl.h
src/: hdsm.cpp  hdsmimpl.cpp
